--- a/multisig-accounts.html
+++ b/multisig-accounts.html
@@ -95,9 +95,9 @@
                   <p>Staked: <span>0.0000 C</span></p>
                 </div>
                 <div class="button-group">
-                  <button class="button-primary">Send</button>
-                  <button class="button-primary">Edit</button>
-                  <button class="button-primary">Add proxy</button>
+                  <button class="button-primary"><span class="icon-send"></span> Send</button>
+                  <button class="button-primary"><span class="icon-edit"></span> Edit</button>
+                  <button class="button-primary"><span class="icon-layers"></span> Add proxy</button>
                 </div>
               </div>
 
