--- a/new-multisig.html
+++ b/new-multisig.html
@@ -66,40 +66,67 @@
             <h3>Available signatories (3)</h3>
             <div class="side-item-content scrollable">
               <div class="multisig-account">
-                <h5>Demo Account</h5>
-                <p class="account-address" data-value="5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP"></p>
+                <div>
+                  <h5>Demo Account</h5>
+                  <p class="account-address" data-value="5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP"></p>
+                </div>
+                <button class="button-secondary"><span class="icon-plus-circle"></span> Add</button>
               </div>
               <div class="multisig-account">
-                <h5>Test Account 1</h5>
-                <p class="account-address" data-value="5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP"></p>
+                <div>
+                  <h5>Test Account 1</h5>
+                  <p class="account-address" data-value="5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP"></p>
+                </div>
+                <button class="button-secondary"><span class="icon-plus-circle"></span> Add</button>
               </div>
               <div class="multisig-account">
-                <h5>Test Account 2</h5>
-                <p class="account-address" data-value="5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP"></p>
+                <div>
+                  <h5>Test Account 2</h5>
+                  <p class="account-address" data-value="5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP"></p>
+                </div>
+                <button class="button-secondary"><span class="icon-plus-circle"></span> Add</button>
               </div>
               <div class="multisig-account">
-                <h5>Test Account 3</h5>
-                <p class="account-address" data-value="5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP"></p>
+                <div>
+                  <h5>Test Account 3</h5>
+                  <p class="account-address" data-value="5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP"></p>
+                </div>
+                <button class="button-secondary"><span class="icon-plus-circle"></span> Add</button>
               </div>
               <div class="multisig-account">
-                <h5>Test Account 4</h5>
-                <p class="account-address" data-value="5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP"></p>
+                <div>
+                  <h5>Test Account 4</h5>
+                  <p class="account-address" data-value="5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP"></p>
+                </div>
+                <button class="button-secondary"><span class="icon-plus-circle"></span> Add</button>
               </div>
               <div class="multisig-account">
-                <h5>Test Account 5</h5>
-                <p class="account-address" data-value="5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP"></p>
+                <div>
+                  <h5>Test Account 5</h5>
+                  <p class="account-address" data-value="5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP"></p>
+                </div>
+                <button class="button-secondary"><span class="icon-plus-circle"></span> Add</button>
               </div>
               <div class="multisig-account">
-                <h5>Test Account 6</h5>
-                <p class="account-address" data-value="5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP"></p>
+                <div>
+                  <h5>Test Account 6</h5>
+                  <p class="account-address" data-value="5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP"></p>
+                </div>
+                <button class="button-secondary"><span class="icon-plus-circle"></span> Add</button>
               </div>
               <div class="multisig-account">
-                <h5>Test Account 7</h5>
-                <p class="account-address" data-value="5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP"></p>
+                <div>
+                  <h5>Test Account 7</h5>
+                  <p class="account-address" data-value="5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP"></p>
+                </div>
+                <button class="button-secondary"><span class="icon-plus-circle"></span> Add</button>
               </div>
               <div class="multisig-account">
-                <h5>Test Account 8</h5>
-                <p class="account-address" data-value="5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP"></p>
+                <div>
+                  <h5>Test Account 8</h5>
+                  <p class="account-address" data-value="5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP"></p>
+                </div>
+                <button class="button-secondary"><span class="icon-plus-circle"></span> Add</button>
               </div>
             </div>
           </div>
@@ -107,16 +134,25 @@
             <h3>Selected signatories (0)</h3>
             <div class="side-item-content scrollable">
               <div class="multisig-account">
-                <h5>Demo Account</h5>
-                <p class="account-address" data-value="5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP"></p>
+                <div>
+                  <h5>Demo Account</h5>
+                  <p class="account-address" data-value="5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP"></p>
+                </div>
+                <button class="button-secondary"><span class="icon-minus-circle"></span> Remove</button>
               </div>
               <div class="multisig-account">
-                <h5>Test Account 1</h5>
-                <p class="account-address" data-value="5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP"></p>
+                <div>
+                  <h5>Test Account 1</h5>
+                  <p class="account-address" data-value="5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP"></p>
+                </div>
+                <button class="button-secondary"><span class="icon-minus-circle"></span> Remove</button>
               </div>
               <div class="multisig-account">
-                <h5>Test Account 2</h5>
-                <p class="account-address" data-value="5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP"></p>
+                <div>
+                  <h5>Test Account 2</h5>
+                  <p class="account-address" data-value="5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP"></p>
+                </div>
+                <button class="button-secondary"><span class="icon-minus-circle"></span> Remove</button>
               </div>
             </div>
           </div>
