--- a/address-book.html
+++ b/address-book.html
@@ -24,7 +24,8 @@
     <header>
       <div class="header-wrapper pagewidth">
         <div class="logo">
-          <a href="index.html">Logo</a>
+          <svg class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg"><path d="M512 0c-285.984 0-422.656 161.504-428.352 168.384-2.336 2.88-3.648 6.464-3.648 10.208l0 321.728c0 272.128 250.432 433.696 358.08 490.528 7.808 4.128 17.472 1.12 21.632-6.688 4.128-7.808 1.12-17.504-6.688-21.632-127.36-67.232-341.024-216.672-341.024-462.24l0-315.616c22.464-24.16 148.224-147.104 384-152.48l0 975.808c0 8.832 7.168 16 16 16 4.768 0 9.056-2.08 12-5.408 52.384-22.528 420-192.48 420-522.592l0-320c0-3.744-1.312-7.36-3.68-10.208-4.736-5.728-118.848-140-356.512-163.968-8.8-0.608-16.672 5.536-17.536 14.304-0.896 8.8 5.536 16.64 14.304 17.536 201.184 20.288 310.496 126.24 331.424 148.48l0 313.856c0 286.464-299.616 446.368-384 485.728l0-965.728c0-8.832-7.168-16-16-16z" /></svg>
+          <span>SecureSign</span>
         </div>
         <div class="navigation">
           <nav>
@@ -35,13 +36,18 @@
             <a href="extrinsics.html"><span class="icon-activity"></span>Extrinsics</a>
           </nav>
         </div>
-        <div class="options">
+        <div class="header-options">
           <div class="theme-toggle-wrapper">
             <button id="theme-toggle" class="theme-toggle" aria-label="Toggle dark/light mode">
               <span class="toggle-track">
                 <span class="toggle-indicator"></span>
               </span>
             </button>
+          </div>
+          <div class="blockchain-selector">
+            <div class="network-selection-close"><span class="icon-x"></span></div>
+            <svg xmlns="http://www.w3.org/2000/svg" width="23" height="24" viewBox=" 0 0 43 45" fill="none" class="TopBar_logo__DLLTR TopBar_logoNavOpen__OHyTZ" aria-label="Polkadot logo"><path d="M21.1695 9.42485C25.6465 9.42485 29.2758 7.31502 29.2758 4.71242C29.2758 2.10982 25.6465 0 21.1695 0C16.6926 0 13.0633 2.10982 13.0633 4.71242C13.0633 7.31502 16.6926 9.42485 21.1695 9.42485Z"></path><path d="M40.6292 24.3758C38.3015 23.0084 34.7041 25.1897 32.5229 29.0394C30.2929 32.8891 30.1952 37.0969 32.5229 38.4154C34.8506 39.7827 38.3991 37.6015 40.6292 33.703C42.8592 29.9021 42.9569 25.6943 40.6292 24.3758Z"></path><path d="M21.1695 44.9996C25.6465 44.9996 29.2758 42.8898 29.2758 40.2872C29.2758 37.6846 25.6465 35.5748 21.1695 35.5748C16.6926 35.5748 13.0633 37.6846 13.0633 40.2872C13.0633 42.8898 16.6926 44.9996 21.1695 44.9996Z"></path><path d="M1.70935 24.3758C-0.618353 25.6943 -0.520688 29.9021 1.70935 33.703C3.93938 37.6015 7.48789 39.7827 9.81559 38.4154C12.1433 37.0969 12.0456 32.8891 9.81559 29.0394C7.63439 25.1897 4.03704 23.0084 1.70935 24.3758Z"></path><path d="M9.82352 6.58442C7.49582 5.21708 3.9473 7.39831 1.71727 11.248C-0.51276 15.0977 -0.610426 19.3055 1.71727 20.624C4.04497 21.9914 7.64232 19.8101 9.82352 15.9116C12.0535 12.1107 12.1512 7.90292 9.82352 6.58442Z"></path><path d="M32.5229 6.58442C30.1952 7.90292 30.2929 12.1107 32.5229 15.9116C34.7041 19.8101 38.3015 21.9914 40.6292 20.624C42.9569 19.3055 42.8592 15.0977 40.6292 11.248C38.3991 7.39831 34.8506 5.21708 32.5229 6.58442Z"></path></svg>
+            <span>Polkadot</span>
           </div>
         </div>
       </div>
